--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,19 @@
 {
   "presets": [
-    "@babel/preset-env",
+    ["@babel/preset-env", {
+      "useBuiltIns": "usage",
+      "targets": {
+        "ie": "11"
+      },
+      "corejs": 3
+    }],
     "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-transform-runtime", {
+      "corejs": 3,
+      "regenerator": true
+    }]
   ]
 }
