--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime-corejs3": "^7.8.3",
     "bcrypt-password-hash": "^1.0.0",
     "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
